For the v1.2.4 release
Updated GitHub Actions. Include main and master branches.

--- a/.github/workflows/testmacos.yml
+++ b/.github/workflows/testmacos.yml
@@ -3,10 +3,10 @@ name: Run Tests macOS
 on:
   push:
     branches:
-      - main
+      - [main, master]
   pull_request:
     branches:
-      - main
+      - [main, master]
 
 jobs:
   test:
