--- a/.github/workflows/testwindows.yml
+++ b/.github/workflows/testwindows.yml
@@ -3,10 +3,10 @@ name: Run Tests Windows
 on:
   push:
     branches:
-      - main
+      - [main, master]
   pull_request:
     branches:
-      - main
+      - [main, master]
 
 jobs:
   test:
