--- a/.github/workflows/testmacos.yml
+++ b/.github/workflows/testmacos.yml
@@ -3,10 +3,12 @@ name: Run Tests macOS
 on:
   push:
     branches:
-      - [main, master]
+      - main
+      - master
   pull_request:
     branches:
-      - [main, master]
+      - main
+      - master
 
 jobs:
   test:
